--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"@csstools/normalize.css": "^10.1.0",
 		"countup.js": "^2.0.7",
 		"es7-object-polyfill": "^1.0.1",
+		"imask": "^6.4.2",
 		"intersection-observer": "^0.7.0",
+		"jquery": "^3.6.0",
+		"parsleyjs": "^2.9.2",
 		"promise-polyfill": "^8.2.0",
 		"sal.js": "^0.6.6",
 		"smoothscroll-polyfill": "^0.4.4",
