Атомы, select2 (не разобрался с тем что в проекте. Сделал простое подключение простого селекта и переписал стили)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"parsleyjs": "^2.9.2",
 		"promise-polyfill": "^8.2.0",
 		"sal.js": "^0.6.6",
+		"select2": "^4.1.0-rc.0",
 		"smoothscroll-polyfill": "^0.4.4",
 		"vanilla-lazyload": "^15.1.1"
 	},
