Организмы, slider-card

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"@csstools/normalize.css": "^10.1.0",
 		"countup.js": "^2.0.7",
 		"es7-object-polyfill": "^1.0.1",
-		"imask": "^6.4.2",
+		"focus-visible": "^5.2.0",
+		"imask": "^6.0.7",
 		"intersection-observer": "^0.7.0",
 		"jquery": "^3.6.0",
 		"parsleyjs": "^2.9.2",
@@ -19,7 +20,8 @@
 		"sal.js": "^0.6.6",
 		"select2": "^4.1.0-rc.0",
 		"smoothscroll-polyfill": "^0.4.4",
-		"vanilla-lazyload": "^15.1.1"
+		"vanilla-lazyload": "^15.1.1",
+		"swiper": "^5.3.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
@@ -29,6 +31,7 @@
 		"autoprefixer": "^9.6.0",
 		"babel": "^6.23.0",
 		"babel-loader": "^8.2.2",
+		"babel-plugin-inferno": "^6.1.1",
 		"babel-polyfill": "^6.26.0",
 		"chokidar": "^3.3.1",
 		"clean-webpack-plugin": "^3.0.0",
@@ -38,9 +41,7 @@
 		"cssnano": "latest",
 		"eslint": "^6.5.1",
 		"eslint-config-airbnb": "^18.1.0",
-		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-prettier": "^3.3.1",
 		"file-loader": "^4.0.0",
 		"glob": "^7.1.4",
 		"html-beautify-webpack-plugin": "^1.0.5",
@@ -52,8 +53,6 @@
 		"portfinder-sync": "0.0.2",
 		"postcss-loader": "^3.0.0",
 		"postcss-preset-env": "^6.6.0",
-		"prettier": "2.2.1",
-		"prettier-plugin-style-order": "^0.2.2",
 		"raw-loader": "^4.0.0",
 		"sass-loader": "^7.1.0",
 		"sass-resources-loader": "^2.0.1",
@@ -68,15 +67,12 @@
 		"webpack-dev-server": "^3.10.1"
 	},
 	"scripts": {
-		"start": "cross-env NODE_ENV=development TPL=express webpack-dev-server --colors --progress --hot --inline",
-		"build": "cross-env NODE_ENV=production webpack --colors --progress",
-		"build:debug": "cross-env NODE_ENV=development DEBUG=debugging webpack --colors --progress",
 		"update": "git pull origin master && npm run build",
 		"lint": "eslint ./src/**/*.js",
-		"lint:write": "eslint --debug src/ --fix",
 		"lint:fix": "eslint ./src/**/*.js --fix",
-		"prettier": "prettier --write src/**/*.js",
+		"build": "cross-env NODE_ENV=production webpack --colors --progress",
 		"build:assets": "cross-env NODE_ENV=production TPL=none webpack --colors --progress",
+		"start": "cross-env NODE_ENV=development TPL=express webpack-dev-server --colors --progress --hot --inline",
 		"start:legacy": "cross-env NODE_ENV=development webpack-dev-server --colors --progress --hot --inline",
 		"stats": "cross-env NODE_ENV=production STATS=stats webpack --colors --progress"
 	},
