--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"countup.js": "^2.0.7",
 		"es7-object-polyfill": "^1.0.1",
 		"focus-visible": "^5.2.0",
+		"gsap": "^3.6.0",
 		"imask": "^6.0.7",
 		"intersection-observer": "^0.7.0",
 		"jquery": "^3.6.0",
@@ -20,8 +21,9 @@
 		"sal.js": "^0.6.6",
 		"select2": "^4.1.0-rc.0",
 		"smoothscroll-polyfill": "^0.4.4",
-		"vanilla-lazyload": "^15.1.1",
-		"swiper": "^5.3.6"
+		"swiper": "^6.5.0",
+		"throttle-debounce": "^3.0.1",
+		"vanilla-lazyload": "^15.1.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.10",
